fixed scrollbar on details for GameView

--- a/neuro_arcade/reactapp/src/styles/App.module.css
+++ b/neuro_arcade/reactapp/src/styles/App.module.css
@@ -140,6 +140,7 @@
         }
         #details {
             gap: 5em;
+            margin: 0 1em;
             overflow-x: scroll;
             flex-direction: row;
         }
