--- a/neuro_arcade/reactapp/src/styles/components/Button.module.css
+++ b/neuro_arcade/reactapp/src/styles/components/Button.module.css
@@ -4,7 +4,7 @@
     align-items: center;
     height: 4em;
     width: max-content;
-    margin: 0.5em;
+    margin: 1em 0;
 }
 .ButtonBlock {
     text-decoration: none;
